@@ -42,6 +42,15 @@ struct	contextStruct
 	unsigned	id;
 };
 
+struct networkDriveStruct
+{
+	char	*fsType;
+	char	*serverName;
+	char	*sharePath;
+};
+
+enum {NOTNETURL=0,VALIDNETURL,INVALIDNETURL};
+
 enum	{CONTEXTNEWFILE=0,CONTEXTNEWFOLDER,CONTEXTBMNEW,CONTEXTOPEN,CONTEXTDELETE,CONTEXTDUP,CONTEXTEXTRACT,CONTEXTCOPY,CONTEXTPROPS,CONTEXTPASTE,CONTEXTSHOW,CONTEXTHIDE,CONTEXTDISKMOUNT,CONTEXTDISKUNMOUNT,CONTEXTDISKEJECT,CONTEXTBMOPEN,CONTEXTBMDELETE,MAINFILENEW,MAINFILETERMINAL,MAINFILEPREFS,MAINFILEQUIT,MAINHELPABOUT,MAINTOOLSBLANKTOOL};
 
 enum {LOADHIDENFOLDERS=0,LOADFOLDERs,LOADHIDDENFILES,LOADFILES};
